kubernetes/adguard-home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
        - containerPort: 3000
        volumeMounts:
        - name: work
          mountPath: /opt/adguardhome/work
        - name: conf
          mountPath: /opt/adguardhome/conf
      volumes:
      - name: work
        hostPath:
          path: /var/lib/k8s/adguard-home/work
      - name: conf
        hostPath:
          path: /var/lib/k8s/adguard-home/conf
