kubernetes/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: homelab
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.0.220
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  namespace: homelab
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
  - port: 3000
    targetPort: 3000
